--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/sandy-06/YummyShop.io#readme",
   "dependencies": {
+    "apollo-server-express": "^3.6.3",
     "concurrently": "^7.0.0"
   }
 }
