--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-core": "^3.6.3",
-    "apollo-server-express": "^3.6.3",
+    
+    "apollo-server-express": "2.25.3",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
